Modifying example in `user-guide` section (#2237)
* doc: updating `user-guide`

* doc: using `sphinx_design` for `mapdl_example.rst`

* fix: `mapdl_examples` + local issues when building doc

* fix: `composite_dcb.py`

* doc: adding `mapdl` as an accepted word

* fix: code style check

* fix: minor doc changes
Pyvista to PyVista

* maint: updating `pyproject.toml`

* fix: revert last commit

* doc: fixing code blocks

* review: applying German's suggestion

* doc: minor changes

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* doc: updating doc titles

* dic: updating `convert.rst` file

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* doc: removing `mapdl_example.rst` from `user_guide`

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* doc: adding `mapdl_example.rst` as new examples in the example gallery

* doc: fixing doc error

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* doc: fixing `convert.rst`

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* doc: fixing a reccurent pre-commit issue

* doc: fixing plottings

* doc: fixing `spotweld.py`

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Update examples/00-mapdl-examples/spotweld.py

Co-authored-by: German <28149841+germa89@users.noreply.github.com>

* Update examples/00-mapdl-examples/torsional_load.py

Co-authored-by: German <28149841+germa89@users.noreply.github.com>

* maint: changing `if mapdl._local` into `if mapdl.is_local`

* fix: typos + adding `is_local` property in `mapdl_grpc`

* doc: saving local changes

* doc: using `mapdl.post_processing` module for plotting results

* 

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ doc/source/examples/gallery_examples/*
 # docs
 _autosummary
 doc/build_errors.txt
+doc/source/images/auto-generated/*
 
 
 # Testing
