--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,7 +98,9 @@ doc = [
     "sphinx-autobuild==2021.3.14",
     "sphinx-autodoc-typehints==1.25.2",
     "sphinx-copybutton==0.5.2",
+    "sphinx-design==0.5.0",
     "sphinx-gallery==0.15.0",
+    "sphinx-notfound-page==0.8.3",
     "sphinxcontrib-websupport==1.2.6",
     "sphinxemoji==0.2.0",
     "sphinx-reredirects==0.1.3",
