--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -824,7 +824,7 @@ jobs:
           files: |
             ./**/*.whl
             ./**/*.tar.gz
-            ./documentation-pdf
+            ./**/pymapdl*.pdf
             ./**/ansys-mapdl-core*.zip
             ./minimum_requirements.txt
 
