adding file exclude

--- a/.devcontainer/codespaces-notebook/devcontainer.json
+++ b/.devcontainer/codespaces-notebook/devcontainer.json
@@ -47,7 +47,21 @@
 					"tests"
 				],
 				"python.testing.unittestEnabled": false,
-				"python.testing.pytestEnabled": true
+				"python.testing.pytestEnabled": true,
+				"files.exclude": {
+					"": true,
+					".**/.*": true,
+					".ansys": true,
+					".cache": true,
+					".ipython": true,
+					".config": true,
+					".docker": true,
+					".local": true,
+					".vscode*": true,
+					".bash*": true,
+					".profile": true,
+					".*": false,
+				}
 			}
 		  }
 	}
