avoiding git detection

--- a/.devcontainer/codespaces-notebook/devcontainer.json
+++ b/.devcontainer/codespaces-notebook/devcontainer.json
@@ -60,8 +60,9 @@
 					".vscode*": true,
 					".bash*": true,
 					".profile": true,
-					".*": false,
-				}
+					".*": false
+				},
+				"git.autoRepositoryDetection": "openEditors"
 			}
 		  }
 	}
