adding more hidden directories

--- a/.devcontainer/codespaces-notebook/devcontainer.json
+++ b/.devcontainer/codespaces-notebook/devcontainer.json
@@ -60,6 +60,8 @@
 					".vscode*": true,
 					".bash*": true,
 					".profile": true,
+					".jupyter": true,
+					".ipynb_checkpoints": true,
 					".*": false
 				},
 				"git.autoRepositoryDetection": "openEditors"
