--- a/.devcontainer/codespaces-notebook/requirements.txt
+++ b/.devcontainer/codespaces-notebook/requirements.txt
@@ -1,3 +1,5 @@
 jupyterlab>=3.2.8
 ipywidgets==8.1.1
-jupytext==1.16.1  # for converting the python files to jupyter notebooks
+trame==3.5.1
+pandas==2.1.4
+vtk==9.3.0
