--- a/.devcontainer/codespaces-notebook/requirements.txt
+++ b/.devcontainer/codespaces-notebook/requirements.txt
@@ -7,3 +7,5 @@ trame-client==2.15.0
 trame-server==2.15.0
 trame-vtk==2.7.0
 trame-vuetify==2.4.2
+trame_jupyter_extension<2.0.0
+pyvista[jupyter]==0.43.2
