making sure directory exists

--- a/.devcontainer/codespaces-notebook/Dockerfile
+++ b/.devcontainer/codespaces-notebook/Dockerfile
@@ -41,6 +41,7 @@ RUN python3.10 -m venv ./.venv && \
     pip install -r requirements.txt && \
     echo 'source ./.venv/bin/activate' >> ~/.bashrc && \
     pip install "trame_jupyter_extension<2" && \
+    mkdir -p /home/mapdl/.local/lib && \
     rm requirements.txt
 
 USER root
