--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -27,7 +27,7 @@ Vocab = ANSYS
 # Apply the following styles
 BasedOnStyles = Vale, Google
 
-TokenIgnores = (:(func|class|meth|attr|py):`(?:.|\n)*?`)|(<.*>)|(:.*:)
+TokenIgnores = (:(func|class|meth|attr|py):`(?:.|\n)*?`)|(<.*>)
 
 # Removing Google-specific rule - Not applicable under some circumstances
 Google.Colons = NO
