--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,7 +117,7 @@ Source = "https://github.com/ansys/pymapdl"
 
 [project.scripts]
 pymapdl_convert_script = "ansys.mapdl.core.cli:convert"
-launch_mapdl = "ansys.mapdl.core.cli:launch_mapdl"
+pymapdl = "ansys.mapdl.core.cli:main"
 
 [tool.pytest.ini_options]
 junit_family = "legacy"
