--- a/doc/Makefile
+++ b/doc/Makefile
@@ -61,7 +61,8 @@ endif
 	@$(SPHINXBUILD) -M latex "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 	python post_process_tex.py  # post-process latex file after sphinx build and before latex build
 	cd $(BUILDDIR)/latex && latexmk -r latexmkrc -pdf *.tex -interaction=nonstopmode || true
-	(test -f $(BUILDDIR)/latex/pymapdl-Documentation-*.pdf && echo pdf exists) || exit 1
+	(test -f $(BUILDDIR)/latex/pymapdl-Documentation-*.pdf && echo "pdf exists!") || exit 1
+	qpdf $(BUILDDIR)/latex/pymapdl-Documentation-*.pdf && echo "File is OK" && exit 0 || echo "File is corrupt" && exit 1
 
 linkcheck:
 ifeq ($(strip $(MSG)), )
