--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,7 +142,7 @@ jobs:
       - name: "Install OS packages"
         run: |
           sudo apt update 
-          sudo apt install zip pandoc libgl1-mesa-glx xvfb texlive-latex-extra latexmk graphviz texlive-xetex
+          sudo apt install zip pandoc libgl1-mesa-glx xvfb texlive-latex-extra latexmk graphviz texlive-xetex texlive-fonts-extra qpdf
 
       - name: "Test virtual framebuffer"
         run: |
@@ -824,7 +824,7 @@ jobs:
           files: |
             ./**/*.whl
             ./**/*.tar.gz
-            ./**/*pymapdl-Documentation-*.pdf
+            ./**/pymapdl*.pdf
             ./**/ansys-mapdl-core*.zip
             ./minimum_requirements.txt
 
