--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,8 +116,8 @@ name = "ansys.mapdl.core"
 Source = "https://github.com/ansys/pymapdl"
 
 [project.scripts]
-pymapdl_convert_script = "ansys.mapdl.core.cli:convert"
-launch_mapdl = "ansys.mapdl.core.cli:launch_mapdl"
+pymapdl_convert_script = "ansys.mapdl.core.cli:old_pymapdl_convert_script_entry_point"
+pymapdl = "ansys.mapdl.core.cli:main"
 
 [tool.pytest.ini_options]
 junit_family = "legacy"
