--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -805,6 +805,7 @@ jobs:
 
 
   release:
+    name: "Release"
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     needs: [smoke-tests, docs-build, build-test, build-test-ubuntu, build-test-ubuntu-minimal]
     runs-on: ubuntu-latest
