Fixing release not finding minimum requirements file (#2826)
fixing path in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -828,7 +828,7 @@ jobs:
             ./**/*.tar.gz
             ./**/pymapdl*.pdf
             ./**/ansys-mapdl-core*.zip
-            ./minimum_requirements.txt
+            ./**/minimum_requirements.txt
 
       - name: Upload to Public PyPi
         env:
