--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ env:
   PYANSYS_OFF_SCREEN: True
   DPF_START_SERVER: False
   DPF_PORT: 21002
-  DOCKER_PACKAGE: ghcr.io/ansys/mapdl
-  DOCKER_IMAGE_VERSION_DOCS_BUILD: v24.1-ubuntu-student
+  MAPDL_PACKAGE: ghcr.io/ansys/mapdl
+  MAPDL_IMAGE_VERSION_DOCS_BUILD: v24.1-ubuntu-student
   ON_CI: True
   PYTEST_ARGUMENTS: '-vv --durations=10 --maxfail=3 --reruns 3 --reruns-delay 4 --cov=ansys.mapdl.core --cov-report=html'
 
@@ -166,9 +166,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: "Pull, launch, and validate MAPDL service"
-        run: .ci/start_mapdl_student.sh
+        run: .ci/start_mapdl.sh
         env:
-          MAPDL_IMAGE: '${{ env.DOCKER_PACKAGE }}:${{ env.DOCKER_IMAGE_VERSION_DOCS_BUILD }}'
+          LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
+          MAPDL_VERSION: ${{ env.MAPDL_IMAGE_VERSION_DOCS_BUILD }}
           DISTRIBUTED_MODE: "dmp"
 
       - name: "Retrieve PyMAPDL version"
@@ -394,28 +395,9 @@ jobs:
       - name: "Pull, launch, and validate MAPDL service"
         env:
           LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
-        run: |
-          export MAPDL_VERSION=${{ matrix.mapdl-version }}
-          export MAPDL_IMAGE=${{ env.DOCKER_PACKAGE }}:${{ matrix.mapdl-version }}
-          export DISTRIBUTED_MODE=${{ steps.distributed_mode.outputs.distributed_mode }}
-
-          echo "MAPDL_VERSION: $MAPDL_VERSION"
-          echo "MAPDL_IMAGE:   $MAPDL_IMAGE"
-
-          if [[ $MAPDL_VERSION == *"ubuntu-student"* ]] ; then
-            echo "It is student version (ubuntu-based)."
-            echo "No license server is needed."
-            .ci/start_mapdl_student.sh
-
-          elif [[ $MAPDL_VERSION == *"ubuntu"* ]] ; then
-            echo "It is an ubuntu based image"
-            .ci/start_mapdl_ubuntu.sh
-
-          else
-            echo "It is a CentOS based image"
-            .ci/start_mapdl.sh
-
-          fi;
+          MAPDL_VERSION: ${{ matrix.mapdl-version }}
+          DISTRIBUTED_MODE: ${{ steps.distributed_mode.outputs.distributed_mode }}
+        run: .ci/start_mapdl.sh
 
       - name: "Unit testing requirements installation"
         run: |
