--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -411,6 +411,9 @@ jobs:
         run: |
           $(docker pull ghcr.io/ansys/dpf-core:22.2dev && docker run -d --name dpfserver -p ${{ env.DPF_PORT }}:50052 ghcr.io/ansys/dpf-core:22.2dev && echo "DPF Server active on port ${{ env.DPF_PORT }}.") &
 
+      - name: "asdf"
+        run: ps aux
+
       - name: "Unit testing"
         env:
           DISTRIBUTED_MODE: ${{ steps.distributed_mode.outputs.distributed_mode }}
@@ -419,7 +422,6 @@ jobs:
           if [[ "${{ matrix.mapdl-version }}" == *"ubuntu"* ]]; then export ON_UBUNTU=true;fi
           echo "Waiting for MAPDL service to be up..."
           nc -v -z localhost $PYMAPDL_PORT
-          ps
           if ps -p $PID > /dev/null
           then
             echo "MAPDL is running on PID $PID"
