--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,28 @@ jobs:
       - name: "Install Git and checkout project"
         uses: actions/checkout@v4
 
+      - name: "Login in Github container registry"
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: "Pull, launch, and validate MAPDL service"
+        id: start_mapdl
+        env:
+          LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
+          MAPDL_VERSION: ${{ env.MAPDL_IMAGE_VERSION_DOCS_BUILD }}
+          DISTRIBUTED_MODE: "dmp"
+        run: |
+          .ci/start_mapdl.sh &> mapdl_launch.log & export DOCKER_PID=$!
+          echo "Launching MAPDL service at PID: $DOCKER_PID"
+          echo "DOCKER_PID=$(echo $DOCKER_PID)" >> $GITHUB_OUTPUT
+
+      - name: "DPF server activation"
+        run: |
+          $(docker pull ghcr.io/ansys/dpf-core:22.2dev && docker run -d --name dpfserver -p ${{ env.DPF_PORT }}:50052 ghcr.io/ansys/dpf-core:22.2dev && echo "DPF Server active on port ${{ env.DPF_PORT }}.") &
+
       - name: "Getting files change filters"
         uses: dorny/paths-filter@v3
         id: changes
@@ -158,20 +180,6 @@ jobs:
           pip install .
           xvfb-run python -c "from ansys.mapdl import core as pymapdl; print(pymapdl.Report())"
 
-      - name: "Login in Github container registry"
-        uses: docker/login-action@v3.0.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: "Pull, launch, and validate MAPDL service"
-        run: .ci/start_mapdl.sh
-        env:
-          LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
-          MAPDL_VERSION: ${{ env.MAPDL_IMAGE_VERSION_DOCS_BUILD }}
-          DISTRIBUTED_MODE: "dmp"
-
       - name: "Retrieve PyMAPDL version"
         id: version
         run: |
@@ -209,10 +217,26 @@ jobs:
         run: |
           pip install .[doc]
 
-      - name: "DPF server activation"
+      - name: "Waiting for the services to be up"
         run: |
-          docker pull ghcr.io/ansys/dpf-core:22.2dev
-          docker run -d --name dpfserver -p ${{ env.DPF_PORT }}:50052 ghcr.io/ansys/dpf-core:22.2dev && echo "DPF Server active on port ${{ env.DPF_PORT }}."
+          echo "Waiting for the MAPDL service to be up..."
+          nc -v -z localhost $PYMAPDL_PORT
+          echo "::group:: ps aux Output" && ps aux && echo "::endgroup::" 
+
+          echo "Waiting for MAPDL port is open..."
+          echo "::group:: Waiting for the MAPDL port to be open..." 
+          while ! nc -z localhost $PYMAPDL_PORT; do
+            sleep 0.1
+          done
+          echo "::endgroup::"
+          echo "MAPDL service is up!"
+
+          echo "::group:: Waiting for the DPF port to be open..." 
+          while ! nc -z localhost $DPF_PORT; do
+            sleep 0.1
+          done
+          echo "::endgroup::"
+          echo "DPF service is up!"
 
       - name: "Build documentation"
         run: |
@@ -365,6 +389,10 @@ jobs:
           echo "Launching MAPDL service at PID: $DOCKER_PID"
           echo "DOCKER_PID=$(echo $DOCKER_PID)" >> $GITHUB_OUTPUT
 
+      - name: "DPF server activation"
+        run: |
+          $(docker pull ghcr.io/ansys/dpf-core:22.2dev && docker run -d --name dpfserver -p ${{ env.DPF_PORT }}:50052 ghcr.io/ansys/dpf-core:22.2dev && echo "DPF Server active on port ${{ env.DPF_PORT }}.") &
+  
       - name: "Getting files change filters"
         uses: dorny/paths-filter@v3
         id: changes
@@ -407,32 +435,33 @@ jobs:
         run: |
           python -m pip install .[tests]
 
-      - name: "DPF server activation"
+      - name: "Waiting for the services to be up"
         run: |
-          $(docker pull ghcr.io/ansys/dpf-core:22.2dev && docker run -d --name dpfserver -p ${{ env.DPF_PORT }}:50052 ghcr.io/ansys/dpf-core:22.2dev && echo "DPF Server active on port ${{ env.DPF_PORT }}.") &
-
-      - name: "asdf"
-        run: ps aux
-
-      - name: "Unit testing"
-        env:
-          DISTRIBUTED_MODE: ${{ steps.distributed_mode.outputs.distributed_mode }}
-          PID: ${{ steps.start_mapdl.outputs.DOCKER_PID }}
-        run: |
-          if [[ "${{ matrix.mapdl-version }}" == *"ubuntu"* ]]; then export ON_UBUNTU=true;fi
-          echo "Waiting for MAPDL service to be up..."
+          echo "Waiting for the MAPDL service to be up..."
           nc -v -z localhost $PYMAPDL_PORT
           echo "::group:: ps aux Output" && ps aux && echo "::endgroup::" 
 
           echo "Waiting for MAPDL port is open..."
-          nc -v -z localhost $PYMAPDL_PORT
-          echo "::group:: Waiting for the port to be open..." 
+          echo "::group:: Waiting for the MAPDL port to be open..." 
           while ! nc -z localhost $PYMAPDL_PORT; do
             sleep 0.1
           done
           echo "::endgroup::"
-
           echo "MAPDL service is up!"
+
+          echo "::group:: Waiting for the DPF port to be open..." 
+          while ! nc -z localhost $DPF_PORT; do
+            sleep 0.1
+          done
+          echo "::endgroup::"
+          echo "DPF service is up!"
+
+      - name: "Unit testing"
+        env:
+          DISTRIBUTED_MODE: ${{ steps.distributed_mode.outputs.distributed_mode }}
+        run: |
+          if [[ "${{ matrix.mapdl-version }}" == *"ubuntu"* ]]; then export ON_UBUNTU=true; else export ON_UBUNTU=false; fi
+          echo "ON_UBUNTU: $ON_UBUNTU"
           xvfb-run pytest \
             ${{ env.PYTEST_ARGUMENTS }} \
             --ignore_image_cache \
