--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,6 +122,15 @@ jobs:
       - name: "Install Git and checkout project"
         uses: actions/checkout@v4
 
+      - name: Installing docker
+        run: |
+          chmod +x .ci/install_docker.sh
+          ./.ci/install_docker.sh
+      
+      - name: Test docker
+        run: |
+          docker version
+          
       - name: "Login in Github container registry"
         uses: docker/login-action@v3.0.0
         with:
