--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -388,10 +388,12 @@ jobs:
           DISTRIBUTED_MODE: ${{ steps.distributed_mode.outputs.distributed_mode }}
         run: |
           echo "Launching first MAPDL instance..."
+          export INSTANCE_NAME=MAPDL_0
           .ci/start_mapdl.sh &> mapdl_launch.log & export DOCKER_PID_0=$!
           echo "Launching a second instance for MAPDL pool testing..."
           export PYMAPDL_PORT=${{ env.PYMAPDL_PORT2 }}
           export PYMAPDL_DB_PORT=${{ env.PYMAPDL_DB_PORT2 }}
+          export INSTANCE_NAME=MAPDL_1
           .ci/start_mapdl.sh &> mapdl_launch_2.log & export DOCKER_PID_1=$!
           echo "Launching MAPDL service 0 at PID: $DOCKER_PID_0"
           echo "Launching MAPDL service 1 at PID: $DOCKER_PID_2"
