--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -306,8 +306,9 @@ jobs:
         if: always()
         run: |
           cp -f doc/_build/latex/*.log ./logs-build-docs/ || echo "Latex logs could not be found."
-
+          cp mapdl_launch_0.log ./logs-build-docs/mapdl_launch_0.log || echo "MAPDL launching log not found."
           cp log.txt ./logs-build-docs/ || echo "MAPDL log could not be found."
+
           tar cvzf ./logs-build-docs.tgz ./logs-build-docs 
 
       - name: "Upload logs to GitHub"
