--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -891,7 +891,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        julia-version: ['1.10.2', '1.6.7']
+        julia-version: ['1.10.2']  # '1.6.7'
         os: [ubuntu-latest, windows-latest]
 
     steps:
