Adding all missing ubuntu versions and running in two latests student

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -290,10 +290,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        mapdl-version: ['v22.2.1', 'v22.2-ubuntu', 'v23.1.0', 'v23.2.0', 'v24.1.0', 'v24.1-ubuntu-student']
+        mapdl-version: [
+          'v22.2.1',
+          'v22.2-ubuntu',
+          'v23.1.0',
+          'v23.1-ubuntu',
+          'v23.2.0',
+          'v23.2-ubuntu',
+          'v24.1.0',
+          'v24.1-ubuntu',
+          'v24.1-ubuntu-student',
+          'v24.2.0',
+          'latest-ubuntu',
+          'latest-ubuntu-student',
+          ]
         extended_testing:
           - ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
         exclude:
+          # In PRs skipping all MAPDL version except student ones (commented out).
           - extended_testing: false
             mapdl-version: 'v22.2.1'
           - extended_testing: false
@@ -301,11 +315,24 @@ jobs:
           - extended_testing: false
             mapdl-version: 'v23.1.0'
           - extended_testing: false
+            mapdl-version: 'v23.1-ubuntu'
+          - extended_testing: false
             mapdl-version: 'v23.2.0'
           - extended_testing: false
-            mapdl-version: 'v23.1.0'
+            mapdl-version: 'v23.2-ubuntu'
           - extended_testing: false
             mapdl-version: 'v24.1.0'
+          - extended_testing: false
+            mapdl-version: 'v24.1-ubuntu'
+          # - extended_testing: false
+          #   mapdl-version: 'v24.1-ubuntu-student'
+          - extended_testing: false
+            mapdl-version: 'v24.2.0'
+          - extended_testing: false
+            mapdl-version: 'latest-ubuntu'
+          # - extended_testing: false
+          #   mapdl-version: 'latest-ubuntu-student'
+
     env:
       PYMAPDL_PORT: 21000  # default won't work on GitHub runners
       PYMAPDL_PORT2: 21001  # for the pool testing and default won't work on GitHub runners
