Adding latest to local and minimal

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -509,7 +509,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        mapdl-image: ['v23.2-ubuntu', 'v24.1-ubuntu', 'v24.1-ubuntu-student']
+        mapdl-image: [
+          'v23.2-ubuntu', 
+          'v24.1-ubuntu', 
+          'v24.1-ubuntu-student',
+          'v24.2-ubuntu', 
+          'v24.2-ubuntu-student',
+          ]
         extended_testing:
           - ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
         exclude:
@@ -517,6 +523,8 @@ jobs:
             mapdl-image: 'v23.2-ubuntu'
           - extended_testing: false
             mapdl-image: 'v24.1-ubuntu'
+          - extended_testing: false
+            mapdl-image: 'v24.2-ubuntu'
     container:
       image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-image }}
       options: -u=0:0 --oom-kill-disable --memory=6656MB --memory-swap=16896MB --shm-size=1gb --entrypoint /bin/bash
@@ -635,7 +643,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        mapdl-image: ['v23.2-ubuntu', 'v24.1-ubuntu', 'v24.1-ubuntu-student']
+        mapdl-image: [
+          'v23.2-ubuntu',
+          'v24.1-ubuntu',
+          'v24.1-ubuntu-student',
+          'v24.2-ubuntu',
+          'v24.2-ubuntu-student'
+          ]
         extended_testing:
           - ${{ github.event_name == 'schedule' || ( github.event_name == 'workflow_dispatch' && inputs.run_all_tests ) || ( github.event_name == 'push' && contains(github.ref, 'refs/tags') ) }}
         exclude:
@@ -643,6 +657,8 @@ jobs:
             mapdl-image: 'v23.2-ubuntu'
           - extended_testing: false
             mapdl-image: 'v24.1-ubuntu'
+          - extended_testing: false
+            mapdl-image: 'v24.2-ubuntu'
     container:
       image: ghcr.io/ansys/mapdl:${{ matrix.mapdl-image }}
       options: -u=0:0 --oom-kill-disable --memory=6656MB --memory-swap=16896MB --shm-size=1gb --entrypoint /bin/bash
